フォーム前まで

--- a/index.html
+++ b/index.html
@@ -874,7 +874,7 @@
             今回のA様邸では、東京都補助金を最大限活用し、自己負担を大幅に抑えて導入いただきました。XSOLの防眩パネルは景観に配慮した設計で、都市部の住宅街でも選ばれやすいモデルです。15kWhの大容量蓄電池により、災害時にも安心の電力自立型住宅が実現しました。大変ご好評につき設計にもお時間をいただきましたが、正確な設計且つお客様ファーストの提案や見積もりをさせて頂くという会社の理念が伝わりお客様との契約になり大変嬉しく思います。
           </p>
         </div>
-        <div class="bg-white px-6 rounded-xl pb-9 my-15">
+        <div class="bg-white px-6 rounded-xl pb-9 my-8">
           <h3
             class="text-center bg-basecolor mx-9 py-3 text-white rounded-b-md"
           >
@@ -974,7 +974,7 @@
             S様邸では、京セラ製の太陽光と蓄電池の信頼性・長寿命性を重視して導入いただきました。16.5kWhという大容量で、1日以上の停電にも対応可能です。また、京セラの蓄電池は国産メーカーならではの高耐久仕様で、長期的に安定した電力供給を実現できます。東京都の補助金を活用することで、初期費用を大幅に抑えて導入いただきました。
           </p>
         </div>
-        <div class="bg-white px-6 rounded-xl pb-9 my-15">
+        <div class="bg-white px-6 rounded-xl pb-9 my-8">
           <h3
             class="text-center bg-basecolor mx-9 py-3 text-white rounded-b-md"
           >
@@ -1114,46 +1114,203 @@
     </section>
     <!-- 壁面設置が可能！セクション -->
     <section>
-      <div class="text-center">
-        <p>最新技術にも対応！</p>
-        <p class="text-center my-6 bg-red-300">横線のimgが入ります</p>
-        <h2 class="text-xl">
-          最新の超薄型太陽光パネルなら<br /><span class="text-5xl"
+      <div class="w-[90%] mx-auto text-center pt-6">
+        <p
+          class="font-mincho font-semibold text-[1.5rem] tracking-[0.25rem] mb-2"
+        >
+          最新技術にも対応！
+        </p>
+        <img
+          src="images/line.svg"
+          alt="下線"
+          class="h-auto object-cover mx-auto w-[80%]"
+        />
+        <h2
+          class="font-mincho font-semibold text-[1.3rem] tracking-[0.2rem] my-2"
+        >
+          最新の超薄型太陽光パネルなら<br /><span class="text-[2rem]"
             >壁面設置が可能</span
           >
         </h2>
-        <p class="text-center my-6 bg-red-300">imgが入ります</p>
-        <p class="text-center my-6 bg-red-300">flexで3枚imgが入ります</p>
-        <p>
-          シリコン製の太陽電池でありながら、<br />「軽い、薄い、曲がる」を実現した軽量フレキシブル太陽光パネル<br />一般的な太陽光パネルと同等の発電性能を維持しながら<br />70%の重量削減を達成しています！
-        </p>
-        <p class="text-center my-6 bg-red-300">imgが入ります</p>
-        <p class="text-center my-6 bg-red-300">imgが入ります</p>
+        <img
+          src="images/panel.webp"
+          alt="太陽光パネル"
+          class="h-auto object-cover mx-auto w-[80%]"
+        />
       </div>
+      <div class="flex mt-2">
+        <img
+          src="images/house1.webp"
+          alt="設置例1"
+          class="w-1/3 h-auto object-cover"
+        />
+        <img
+          src="images/house2.webp"
+          alt="設置例2"
+          class="w-1/3 h-auto object-cover"
+        />
+        <img
+          src="images/house3.webp"
+          alt="設置例3"
+          class="w-1/3 h-auto object-cover"
+        />
+      </div>
+      <div class="w-[90%] mx-auto text-center">
+        <p class="py-6 text-[0.75rem]">
+          シリコン製の太陽電池でありながら、<br />「軽い、薄い、曲がる」を実現した<br />軽量フレキシブル太陽光パネル<br />一般的な太陽光パネルと同等の発電性能を維持しながら<br />70%の重量削減を達成しています！
+        </p>
+        <img src="images/space.svg" alt="" class="h-auto object-cover" />
+      </div>
+      <a href="#"
+        ><img src="images/banner.webp" alt="" class="h-auto object-cover"
+      /></a>
     </section>
     <!-- ９つの特徴セクション -->
-    <section>
+    <section class="w-[90%] mx-auto py-9">
       <div class="text-center">
-        <h2 class="text-xl">
-          最新の超薄型太陽光パネル<br /><span class="text-5xl">9つの特徴</span>
+        <h2 class="text-xl font-mincho tracking-[0.25rem]">
+          最新の超薄型太陽光パネル<br /><span
+            class="text-5xl font-semibold tracking-[0.7rem] inline-block pt-3"
+            ><span class="font-cinzel">9</span>つの特徴</span
+          >
         </h2>
-        <p class="text-center my-6 bg-red-300">9つimgが入ります</p>
-        <p>
+        <ul class="list-none">
+          <li class="flex mt-9 space-x-6 justify-between px-6">
+            <ul class="contents">
+              <li class="flex-1">
+                <img
+                  src="images/icon1.svg"
+                  alt=""
+                  class="h-10 w-auto mx-auto object-cover my-3"
+                />
+                <p>超軽量</p>
+              </li>
+              <li class="flex-1">
+                <img
+                  src="images/icon2.svg"
+                  alt=""
+                  class="h-10 w-auto mx-auto object-cover my-3"
+                />
+                <p>高耐久</p>
+              </li>
+              <li class="flex-1">
+                <img
+                  src="images/icon3.svg"
+                  alt=""
+                  class="h-10 w-auto mx-auto object-cover my-3"
+                />
+                <p>低反射</p>
+              </li>
+            </ul>
+          </li>
+          <li class="flex mt-9 space-x-6 justify-between px-6">
+            <ul class="contents">
+              <li class="flex-1">
+                <img
+                  src="images/icon4.svg"
+                  alt=""
+                  class="h-10 w-auto mx-auto object-cover my-3"
+                />
+                <p>信頼性</p>
+              </li>
+              <li class="flex-1">
+                <img
+                  src="images/icon5.svg"
+                  alt=""
+                  class="h-10 w-auto mx-auto object-cover my-3"
+                />
+                <p>運搬性</p>
+              </li>
+              <li class="flex-1">
+                <img
+                  src="images/icon6.svg"
+                  alt=""
+                  class="h-10 w-auto mx-auto object-cover my-3"
+                />
+                <p>簡単施工</p>
+              </li>
+            </ul>
+          </li>
+          <li class="flex mt-9 space-x-6 justify-between px-6">
+            <ul class="contents">
+              <li class="flex-1">
+                <img
+                  src="images/icon7.svg"
+                  alt=""
+                  class="h-10 w-auto mx-auto object-cover my-3"
+                />
+                <p>柔軟性</p>
+              </li>
+              <li class="flex-1">
+                <img
+                  src="images/icon8.svg"
+                  alt=""
+                  class="h-10 w-auto mx-auto object-cover my-3"
+                />
+                <p>カスタマイズ</p>
+              </li>
+              <li class="flex-1">
+                <img
+                  src="images/icon9.svg"
+                  alt=""
+                  class="h-10 w-auto mx-auto object-cover my-3"
+                />
+                <p>美しい外観</p>
+              </li>
+            </ul>
+          </li>
+        </ul>
+        <p class="mt-9 text-[0.9rem]">
           お客様の住環境・ライフプランに合わせ、<br />最新型・従来型ともに多数のメーカーをご用意しております。<br />他社で設置をお断りされた方もぜひ一度ご相談下さい。
         </p>
-        <p class="text-center my-6 bg-red-300">imgが入ります</p>
+        <a href="#"
+          ><img
+            src="images/conv-btn.webp"
+            class="w-[80%] mx-auto my-6"
+            alt="経験豊富なプロに無料相談・見積もりを依頼する"
+        /></a>
       </div>
     </section>
     <!-- お客様の声セクション -->
     <section class="text-center">
-      <p class="text-xl">
-        株式会社Y2ENERGYGROUPは<br />ソーラーパートナーズ認定の<br />有料工事会社として多くのお客様から<br />お喜びの声を頂いております！
-      </p>
-      <p class="text-center my-6 bg-red-300">背景とimgが入ります</p>
+      <div class="w-[90%] lg:w-[50%] pt-8 pb-85text-center mx-auto">
+        <div class="relative">
+          <img
+            src="images/reason-bg1.svg"
+            alt=""
+            class="absolute left-0 bottom-2 w-14 md:hidden pointer-events-none"
+            aria-hidden="true"
+          />
+          <img
+            src="images/reason-bg2.svg"
+            alt=""
+            class="absolute right-0 top-0 w-14 md:hidden pointer-events-none"
+            aria-hidden="true"
+          />
+          <h2
+            class="relative z-10 text-center text-[1.3rem] font-bold pb-8 font-mincho leading-loose tracking-widest"
+          >
+            株式会社Y2ENERGYGROUPは<br />ソーラーパートナーズ認定の<br />有料工事会社として多くのお客様から<br />お喜びの声を頂いております！
+          </h2>
+        </div>
+      </div>
 
-      <h2 class="">お客様の声</h2>
-      <p class="text-center my-6 bg-red-300">h2の下に背景が入ります</p>
-      <p class="text-center my-6 bg-red-300">3枚imgが入ります</p>
+      <img
+        src="images/nintei.webp"
+        alt="ソーラーパートナーズ認定有料工事会社"
+        class="w-[70%] mx-auto"
+      />
+
+      <img
+        src="images/voice-title.webp"
+        alt="お客様の声"
+        class="w-[90%] mx-auto mt-6"
+      />
+      <img
+        src="images/voice.webp"
+        alt="お客様の声"
+        class="w-[90%] mx-auto mt-6"
+      />
     </section>
     <!-- フォームセクション -->
     <!-- <section class="px-4 py-8">
