--- a/index.html
+++ b/index.html
@@ -1505,117 +1505,122 @@
           style="display: none"
           onload="if(submitted){window.location='https://www.google.co.jp/'}"
         ></iframe>
-        <!-- <form
-          class="form_wrap h-adr"
-          id="form"
-          method="post"
-          target="hidden_iframe"
-          onsubmit="submitted=true"
-          action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSd1UaQOVP3dtw295IAe5d2Y2Ld0AukKqaFuflEYo0ttI2vDQA/formResponse"
-        > テストじゃない方-->
+
         <form
           class="form_wrap h-adr"
           id="form"
           method="post"
           target="hidden_iframe"
           onsubmit="submitted=true"
-          action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfnNTQ9yf_ofTWq52z0hjEtnqpw-0nv5--HWLygTAOzkl4esw/formResponse"
+          action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSelmn2HlSnDmF32On4motf9mGMQ2xqRpct4fWKdzOxFsxmG9A/formResponse"
         >
           <div class="bg-white rounden-xl px-6 py-6 font-mincho mt-6">
-            <!-- <div>
-              <p class="mb-2">
-                現在の使用の電気代<span
-                  class="bg-[#d7444a] text-white px-2 ml-2 text-[0.7rem]"
+            <div>
+              <p>
+                現在の使用の電気代
+                <span class="bg-[#d7444a] text-white px-2 ml-2 text-[0.7rem]"
                   >必須</span
                 >
               </p>
-              <div>
-                <label>
-                  <input type="radio" name="entry.792333350" />
-                  5,000円以上
-                </label>
-              </div>
-              <div>
-                <label>
-                  <input type="radio" name="entry.792333350" />
-                  10,000円以上
-                </label>
-              </div>
-              <div>
-                <label>
-                  <input type="radio" name="entry.792333350" />
-                  15,000円以上
-                </label>
-              </div>
-              <div>
-                <label>
-                  <input type="radio" name="entry.792333350" />
-                  20,000円以上
-                </label>
-              </div>
-            </div> -->
-            <p class="Form-Item-Label">
-              <span class="Form-Item-Label-Required">現在の使用の電気代</span
-              ><span class="bg-[#d7444a] text-white px-2 ml-2 text-[0.7rem]"
-                >必須</span
-              >
-            </p>
-            <div class="radio-list">
-              <input
-                type="radio"
-                name="entry.792333350"
-                value="5,000円以上"
-                checked
-              />
-              <label for="huey">5,000円以上</label>
+
+              <label class="flex items-center cursor-pointer">
+                <input
+                  type="radio"
+                  name="entry.1270370392"
+                  value="5,000円以上"
+                  class="mr-2"
+                  required
+                />
+                <span>5,000円以上</span>
+              </label>
+
+              <label class="flex items-center cursor-pointer">
+                <input
+                  type="radio"
+                  name="entry.1270370392"
+                  value="10,000円以上"
+                  class="mr-2"
+                  required
+                />
+                <span>10,000円以上</span>
+              </label>
+
+              <label class="flex items-center cursor-pointer">
+                <input
+                  type="radio"
+                  name="entry.1270370392"
+                  value="15,000円以上"
+                  class="mr-2"
+                  required
+                />
+                <span>15,000円以上</span>
+              </label>
+
+              <label class="flex items-center cursor-pointer">
+                <input
+                  type="radio"
+                  name="entry.1270370392"
+                  value="20,000円以上"
+                  class="mr-2"
+                  required
+                />
+                <span>20,000円以上</span>
+              </label>
             </div>
-            <div>
-              <input type="radio" name="entry.792333350" value="10,000円以上" />
-              <label for="dewey">10,000円以上</label>
-            </div>
-            <div>
-              <input type="radio" name="entry.792333350" value="15,000円以上" />
-              <label for="louie">15,000円以上</label>
-            </div>
-            <div>
-              <input type="radio" name="entry.792333350" value="20,000円以上" />
-              <label for="louie">20,000円以上</label>
-            </div>
+
             <div class="border-basecolor w-full border-t-[0.1px] my-4"></div>
 
-            <!-- <div>
-              <p class="mb-2">
-                現在の使用のガス代<span
-                  class="bg-[#d7444a] text-white px-2 ml-2 text-[0.7rem]"
+            <div>
+              <p>
+                現在の使用のガス代
+                <span class="bg-[#d7444a] text-white px-2 ml-2 text-[0.7rem]"
                   >必須</span
                 >
               </p>
-              <div>
-                <label>
-                  <input type="radio" name="entry.224141789" />
-                  0円以上
-                </label>
-              </div>
-              <div>
-                <label>
-                  <input type="radio" name="entry.224141789" />
-                  5,000円以上
-                </label>
-              </div>
-              <div>
-                <label>
-                  <input type="radio" name="entry.224141789" />
-                  10,000円以上
-                </label>
-              </div>
-              <div>
-                <label>
-                  <input type="radio" name="entry.224141789" />
-                  25,000円以上
-                </label>
-              </div>
-            </div>
 
+              <label class="flex items-center cursor-pointer">
+                <input
+                  type="radio"
+                  name="entry.1125463034"
+                  value="0円以上"
+                  class="mr-2"
+                  required
+                />
+                <span>0円以上</span>
+              </label>
+
+              <label class="flex items-center cursor-pointer">
+                <input
+                  type="radio"
+                  name="entry.1125463034"
+                  value="5,000円以上"
+                  class="mr-2"
+                  required
+                />
+                <span>5,000円以上</span>
+              </label>
+
+              <label class="flex items-center cursor-pointer">
+                <input
+                  type="radio"
+                  name="entry.1125463034"
+                  value="10,000円以上"
+                  class="mr-2"
+                />
+                <span>10,000円以上</span>
+              </label>
+
+              <label class="flex items-center cursor-pointer">
+                <input
+                  type="radio"
+                  name="entry.1125463034"
+                  value="25,000円以上"
+                  class="mr-2"
+                  required
+                />
+                <span>25,000円以上</span>
+              </label>
+            </div>
             <div class="border-basecolor w-full border-t-[0.1px] my-4"></div>
 
             <div>
@@ -1625,26 +1630,40 @@
                   >必須</span
                 >
               </p>
-              <div>
-                <label>
-                  <input type="radio" name="entry.1709644319" />
-                  あり（10年以上）
-                </label>
-              </div>
-              <div>
-                <label>
-                  <input type="radio" name="entry.1709644319" />
-                  あり（10年未満）
-                </label>
-              </div>
-              <div>
-                <label>
-                  <input type="radio" name="entry.1709644319" />
-                  なし
-                </label>
-              </div>
-            </div>
 
+              <label class="flex items-center cursor-pointer">
+                <input
+                  type="radio"
+                  name="entry.2070243229"
+                  value="あり（10年以上）"
+                  class="mr-2"
+                  required
+                />
+                <span>あり（10年以上）</span>
+              </label>
+
+              <label class="flex items-center cursor-pointer">
+                <input
+                  type="radio"
+                  name="entry.2070243229"
+                  value="あり（10年未満）"
+                  class="mr-2"
+                  required
+                />
+                <span>あり（10年未満）</span>
+              </label>
+
+              <label class="flex items-center cursor-pointer">
+                <input
+                  type="radio"
+                  name="entry.2070243229"
+                  value="なし"
+                  class="mr-2"
+                  required
+                />
+                <span>なし</span>
+              </label>
+            </div>
             <div class="border-basecolor w-full border-t-[0.1px] my-4"></div>
 
             <div>
@@ -1654,21 +1673,77 @@
                   >必須</span
                 >
               </p>
-              <div>
-                <label>
-                  <input type="radio" name="entry.521121784" />
-                  他社との見積りを検討段階
-                </label>
-              </div>
-              <div>
-                <label>
-                  <input type="radio" name="entry.521121784" />
-                  検討したが高額すぎて断念
-                </label>
-              </div>
-            </div>
 
+              <label class="flex items-center cursor-pointer">
+                <input
+                  type="radio"
+                  name="entry.199924570"
+                  value="他社との見積りを検討段階"
+                  class="mr-2"
+                  required
+                />
+                <span>他社との見積りを検討段階</span>
+              </label>
+
+              <label class="flex items-center cursor-pointer">
+                <input
+                  type="radio"
+                  name="entry.199924570"
+                  value="検討したが高額すぎて断念"
+                  class="mr-2"
+                  required
+                />
+                <span>検討したが高額すぎて断念</span>
+              </label>
+            </div>
             <div class="border-basecolor w-full border-t-[0.1px] my-4"></div>
+
+            <!-- <div class="Form-Item first">
+              <p class="Form-Item-Label">
+                <span class="Form-Item-Label-Required">現在の使用の電気代</span
+                ><span class="fontsize12">必須</span>
+              </p>
+              <fieldset>
+                <div class="radio-list">
+                  <input
+                    type="radio"
+                    id="huey"
+                    name="entry.1270370392"
+                    value="5,000円以上"
+                    checked
+                  />
+                  <label for="huey">5,000円以上</label>
+                </div>
+                <div>
+                  <input
+                    type="radio"
+                    id="dewey"
+                    name="entry.1270370392"
+                    value="10,000円以上"
+                  />
+                  <label for="dewey">10,000円以上</label>
+                </div>
+                <div>
+                  <input
+                    type="radio"
+                    id="louie"
+                    name="entry.1270370392"
+                    value="15,000円以上"
+                  />
+                  <label for="louie">15,000円以上</label>
+                </div>
+                <div>
+                  <input
+                    type="radio"
+                    id="louie"
+                    name="entry.1270370392"
+                    value="20,000円以上"
+                  />
+                  <label for="louie">20,000円以上</label>
+                </div>
+              </fieldset>
+            </div>
+            <div class="border-basecolor w-full border-t-[0.1px] my-4"></div> -->
 
             <div>
               <p class="mb-1">
@@ -1680,16 +1755,13 @@
               <p class="text-[0.7rem] font-sans mb-2">
                 ※関東地方の1都6県以外はサービス対象外です。
               </p>
-              <div>
-                <label>
-                  <input
-                    type="text"
-                    class="border py-1"
-                    placeholder=""
-                    name="entry.352518541"
-                  />
-                </label>
-              </div>
+              <input
+                type="text"
+                class="border py-1"
+                placeholder=""
+                name="entry.859663624"
+                required
+              />
             </div>
 
             <div class="mt-3">
@@ -1699,16 +1771,14 @@
                   >必須</span
                 >
               </p>
-              <label>
-                <input
-                  type="text"
-                  class="w-full border py-1 placeholder:pl-2 placeholder:font-sans placeholder:text-[0.8rem] placeholder:leading-normal"
-                  placeholder="例）東京都"
-                  name="entry.82057250"
-                />
-              </label>
+              <input
+                type="text"
+                class="w-full border py-1 placeholder:pl-2 placeholder:font-sans placeholder:text-[0.8rem] placeholder:leading-normal"
+                placeholder="例）東京都"
+                name="entry.1085288309"
+                required
+              />
             </div>
-
             <div class="mt-3">
               <p class="mb-2">
                 市区町村<span
@@ -1716,14 +1786,13 @@
                   >必須</span
                 >
               </p>
-              <label>
-                <input
-                  type="text"
-                  class="w-full border py-1 placeholder:pl-2 placeholder:font-sans placeholder:text-[0.8rem] placeholder:leading-normal"
-                  placeholder="例）〇〇区〇〇町"
-                  name="entry.194989982"
-                />
-              </label>
+              <input
+                type="text"
+                class="w-full border py-1 placeholder:pl-2 placeholder:font-sans placeholder:text-[0.8rem] placeholder:leading-normal"
+                placeholder="例）〇〇区〇〇町"
+                name="entry.383309495"
+                required
+              />
             </div>
 
             <div class="mt-3">
@@ -1733,14 +1802,13 @@
                   >必須</span
                 >
               </p>
-              <label>
-                <input
-                  type="text"
-                  class="w-full border py-1 placeholder:pl-2 placeholder:font-sans placeholder:text-[0.8rem] placeholder:leading-normal"
-                  placeholder="例）1-1-1"
-                  name="entry.1422506702"
-                />
-              </label>
+              <input
+                type="text"
+                class="w-full border py-1 placeholder:pl-2 placeholder:font-sans placeholder:text-[0.8rem] placeholder:leading-normal"
+                placeholder="例）1-1-1"
+                name="entry.932629529"
+                required
+              />
             </div>
 
             <div class="mt-3">
@@ -1750,14 +1818,13 @@
                   >必須</span
                 >
               </p>
-              <label>
-                <input
-                  type="text"
-                  class="w-full border py-1 placeholder:pl-2 placeholder:font-sans placeholder:text-[0.8rem] placeholder:leading-normal"
-                  placeholder="例）田中太郎"
-                  name="entry.1164335155"
-                />
-              </label>
+              <input
+                type="text"
+                class="w-full border py-1 placeholder:pl-2 placeholder:font-sans placeholder:text-[0.8rem] placeholder:leading-normal"
+                placeholder="例）田中太郎"
+                name="entry.214735403"
+                required
+              />
             </div>
 
             <div class="mt-3">
@@ -1770,14 +1837,13 @@
               <p class="text-[0.7rem] font-sans mb-2">
                 ※担当者からご状況をお伺いさせていただきますので<br />&emsp;ご連絡をお取りできる番号をご入力ください
               </p>
-              <label>
-                <input
-                  type="text"
-                  class="w-full border py-1 placeholder:pl-2 placeholder:font-sans placeholder:text-[0.8rem] placeholder:leading-normal"
-                  placeholder="例）09012345678"
-                  name="entry.1153294884"
-                />
-              </label>
+              <input
+                type="text"
+                class="w-full border py-1 placeholder:pl-2 placeholder:font-sans placeholder:text-[0.8rem] placeholder:leading-normal"
+                placeholder="例）09012345678"
+                name="entry.1391697315"
+                required
+              />
             </div>
 
             <div class="mt-3">
@@ -1787,19 +1853,18 @@
                   >必須</span
                 >
               </p>
-              <label>
-                <input
-                  type="text"
-                  class="w-full border py-1 placeholder:pl-2 placeholder:font-sans placeholder:text-[0.8rem] placeholder:leading-normal"
-                  placeholder="例）example@y2energygroup.jp"
-                  name="entry.1636942343"
-                />
-              </label>
+              <input
+                type="text"
+                class="w-full border py-1 placeholder:pl-2 placeholder:font-sans placeholder:text-[0.8rem] placeholder:leading-normal"
+                placeholder="例）example@y2energygroup.jp"
+                name="entry.189612708"
+                required
+              />
             </div>
 
-            <div class="my-5">
+            <!-- <div class="my-5">
               <label class="custom-checkbox text-[0.9rem] font-semibold">
-                <input type="checkbox" name="entry.281252305" />
+                <input type="checkbox" />
                 <span class="checkmark"></span>
                 ご所有の戸建てが、今回の現地コンサルティング対象
               </label>
