--- a/index.html
+++ b/index.html
@@ -1364,134 +1364,7 @@
       />
     </section>
     <!-- フォームセクション -->
-    <!-- <section class="px-4 py-8">
-      <div class="max-w-md mx-auto bg-[#f5e6dc] p-6 rounded-lg">
-        <form
-          id="contactForm"
-          action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSeQgz2ucxWklPWAdD61TaRH0-gyTh11ixfY1xDrZ9Axw2-2tA/formResponse"
-          method="POST"
-          target="hidden_iframe"
-        >
-          <div class="mb-8">
-            <label class="block text-gray-800 font-medium mb-4">
-              現在の使用の電気代
-              <span
-                class="inline-block bg-red-500 text-white text-xs px-2 py-1 ml-2 rounded"
-                >必須</span
-              >
-            </label>
-            <div class="space-y-3">
-              <label class="flex items-center cursor-pointer">
-                <input
-                  type="radio"
-                  name="entry.698604345"
-                  value="5,000円以上"
-                  class="w-5 h-5 text-gray-600 border-gray-300 focus:ring-0"
-                  required
-                />
-                <span class="ml-3 text-gray-700">5,000円以上</span>
-              </label>
-              <label class="flex items-center cursor-pointer">
-                <input
-                  type="radio"
-                  name="entry.698604345"
-                  value="10,000円以上"
-                  class="w-5 h-5 text-gray-600 border-gray-300 focus:ring-0"
-                />
-                <span class="ml-3 text-gray-700">10,000円以上</span>
-              </label>
-              <label class="flex items-center cursor-pointer">
-                <input
-                  type="radio"
-                  name="entry.698604345"
-                  value="15,000円以上"
-                  class="w-5 h-5 text-gray-600 border-gray-300 focus:ring-0"
-                />
-                <span class="ml-3 text-gray-700">15,000円以上</span>
-              </label>
-              <label class="flex items-center cursor-pointer">
-                <input
-                  type="radio"
-                  name="entry.698604345"
-                  value="20,000円以上"
-                  class="w-5 h-5 text-gray-600 border-gray-300 focus:ring-0"
-                />
-                <span class="ml-3 text-gray-700">20,000円以上</span>
-              </label>
-            </div>
-          </div>
-
-          <hr class="border-gray-400 my-6" />
-
-          <div class="mb-6">
-            <label class="block text-gray-800 font-medium mb-4">
-              現在の使用のガス代
-              <span
-                class="inline-block bg-red-500 text-white text-xs px-2 py-1 ml-2 rounded"
-                >必須</span
-              >
-            </label>
-            <div class="space-y-3">
-              <label class="flex items-center cursor-pointer">
-                <input
-                  type="radio"
-                  name="entry.171766517"
-                  value="0円以上"
-                  class="w-5 h-5 text-gray-600 border-gray-300 focus:ring-0"
-                  required
-                />
-                <span class="ml-3 text-gray-700">0円以上</span>
-              </label>
-              <label class="flex items-center cursor-pointer">
-                <input
-                  type="radio"
-                  name="entry.171766517"
-                  value="5,000円以上"
-                  class="w-5 h-5 text-gray-600 border-gray-300 focus:ring-0"
-                />
-                <span class="ml-3 text-gray-700">5,000円以上</span>
-              </label>
-              <label class="flex items-center cursor-pointer">
-                <input
-                  type="radio"
-                  name="entry.171766517"
-                  value="10,000円以上"
-                  class="w-5 h-5 text-gray-600 border-gray-300 focus:ring-0"
-                />
-                <span class="ml-3 text-gray-700">10,000円以上</span>
-              </label>
-              <label class="flex items-center cursor-pointer">
-                <input
-                  type="radio"
-                  name="entry.171766517"
-                  value="25,000円以上"
-                  class="w-5 h-5 text-gray-600 border-gray-300 focus:ring-0"
-                />
-                <span class="ml-3 text-gray-700">25,000円以上</span>
-              </label>
-            </div>
-          </div>
-          <button
-            type="submit"
-            class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg transition-colors"
-          >
-            送信
-          </button>
-        </form>
-
-        <div id="thankYouMessage" class="hidden text-center py-8">
-          <div
-            class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded"
-          >
-            <p class="font-bold mb-2">送信が完了しました！</p>
-            <p class="text-sm">ご回答ありがとうございます。</p>
-          </div>
-        </div>
-
-        <iframe name="hidden_iframe" style="display: none"></iframe>
-      </div>
-    </section> -->
-    <section class="bg-[#fbf5ee]">
+    <section id="form" class="bg-[#fbf5ee]">
       <div class="w-[90%] mx-auto py-9">
         <img
           src="images/gift.svg"
@@ -1885,6 +1758,97 @@
       </div>
     </div>
 
+    <!-- 会社情報セクション -->
+    <section>
+      <div class="w-[80%] mx-auto text-[0.9rem]">
+        <h2>
+          <img
+            src="images/logo.webp"
+            alt="株式会社Y2ENERGYGROUP"
+            class="w-[80%] mx-auto mt-6"
+          />
+        </h2>
+
+        <div
+          class="border-basecolor border-t-[0.1px] mb-3 mt-6 w-full mx-auto"
+        ></div>
+
+        <h3 class="mb-2">住所</h3>
+        <address class="mb-3">
+          〒151-0072<br />東京都渋谷区幡ヶ谷1-2-2 京王幡ヶ谷ビル450
+        </address>
+        <a
+          target="_blank"
+          href="https://maps.app.goo.gl/f8VfJ7ckLvocqBQD6"
+          class="bg-basecolor text-white px-4 py-1 hover:bg-[#4fac00] transition"
+          >Google Mapで確認</a
+        >
+        <div
+          class="border-basecolor border-t-[0.1px] mb-3 mt-6 w-full mx-auto"
+        ></div>
+        <h3 class="mb-2">電話番号</h3>
+        <p><a href="tel:0120181182">0120-181-182</a></p>
+
+        <div
+          class="border-basecolor border-t-[0.1px] mb-3 mt-6 w-full mx-auto"
+        ></div>
+
+        <h3 class="mb-2">営業時間</h3>
+        <p>10:00 - 19:00</p>
+
+        <div
+          class="border-basecolor border-t-[0.1px] mb-3 mt-6 w-full mx-auto"
+        ></div>
+
+        <h3 class="mb-2">定休日</h3>
+        <p>不定休</p>
+
+        <div
+          class="border-basecolor border-t-[0.1px] mb-3 mt-6 w-full mx-auto"
+        ></div>
+
+        <h3 class="mb-2">代表者名</h3>
+        <p>高橋 雄太郎</p>
+
+        <div
+          class="border-basecolor border-t-[0.1px] mb-3 mt-6 w-full mx-auto"
+        ></div>
+
+        <h3 class="mb-2">認定資格</h3>
+        <p>
+          神奈川県知事許可<br />建設業許可（般一5）第91643号<br />神奈川県知事届出<br />登録電気工事業者
+          第20243001号<br />第二種電気工事士免許番号 東京都 第136672号
+        </p>
+
+        <div
+          class="border-basecolor border-t-[0.1px] mb-3 mt-6 w-full mx-auto"
+        ></div>
+      </div>
+      <img src="images/award1.webp" alt="感謝状" class="w-[90%] mx-auto mb-6" />
+
+      <img
+        src="images/award2.webp"
+        alt="2025年Best Partner 株式会社Y2ENERGYGROUP"
+      />
+      <a href="#form"
+        ><img
+          src="images/conv-btn.webp"
+          class="w-[80%] mx-auto py-9"
+          alt="経験豊富なプロに無料相談・見積もりを依頼する"
+      /></a>
+    </section>
+    <!-- フッター-->
+    <footer class="bg-basecolor text-white text-center py-5">
+      <small class="font-mincho block pb-5"
+        >© 2025 y2energygroup All Rights Reserved.</small
+      >
+      <nav>
+        <ul class="font-normal text-[0.8rem] space-y-2">
+          <li><a href="#">特定商取引法に基づく表記</a></li>
+          <li><a href="#">プライバシーポリシー</a></li>
+        </ul>
+      </nav>
+    </footer>
     <!-- <script>
       // フォーム送信後の処理
       const form = document.getElementById("contactForm");
