ページ内スムーススクロール

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
       rel="stylesheet"
     />
     <style>
+      /* スムーズスクロール */
+      html {
+        scroll-behavior: smooth;
+      }
+
       /* カスタムチェックボックス */
       .custom-checkbox {
         position: relative;
@@ -110,7 +115,7 @@
             >安心の4大保証</span
           >で選ばれ続けている<br />Y2ENERGYGROUPにお任せください
         </p>
-        <a href="#"
+        <a href="#form"
           ><img
             src="images/conv-btn.webp"
             class="w-[80%] mx-auto"
@@ -625,7 +630,7 @@
       <p class="text-center py-6">
         省エネ設備は長期使用が前提。<br />補助金や安さだけでなく、施工技術と保証が充実した<br />【安心できる業者】を選びましょう!!
       </p>
-      <a href="#"
+      <a href="#form"
         ><img
           src="images/conv-btn.webp"
           class="w-[80%] mx-auto pb-9"
@@ -1155,7 +1160,7 @@
         <p class="text-center leading-relaxed font-mincho font-semibold mt-6">
           安心してお使い頂くために<br />細かい部分までこだわり抜いた<br />施工を心がけており<br />お客様から高い評価を受けています
         </p>
-        <a href="#"
+        <a href="#form"
           ><img
             src="images/conv-btn.webp"
             class="w-[80%] mx-auto py-9"
@@ -1314,7 +1319,7 @@
         <p class="mt-9 text-[0.9rem]">
           お客様の住環境・ライフプランに合わせ、<br />最新型・従来型ともに多数のメーカーをご用意しております。<br />他社で設置をお断りされた方もぜひ一度ご相談下さい。
         </p>
-        <a href="#"
+        <a href="#form"
           ><img
             src="images/conv-btn.webp"
             class="w-[80%] mx-auto my-6"
