--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>title</title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
-    <link rel="icon" href="static/img/favicon.ico" />
+    <link rel="icon" href="images/favicon.ico" />
 
     <link rel="stylesheet" href="./dist/output.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -38,20 +38,45 @@
         </h1>
       </div>
       <div class="flex gap-1 sm:gap-1 shrink-0 max-w-[48%]">
-        <img
-          src="images/nav1.webp"
-          alt="電話相談"
-          class="w-1/2 h-auto object-contain"
-        />
-        <img
-          src="images/nav2.webp"
-          alt="無料相談"
-          class="w-1/2 h-auto object-contain"
-        />
+        <a href="tel:0120181182"
+          ><img
+            src="images/nav1.webp"
+            alt="電話相談"
+            class="w-[100px] h-auto object-contain"
+        /></a>
+        <a href="">
+          <img
+            src="images/nav2.webp"
+            alt="無料相談"
+            class="w-[100px] h-auto object-contain"
+        /></a>
       </div>
     </header>
     <!-- FV セクション -->
     <section class="bg-background">
+      <img
+        src="images/fv-1.webp"
+        alt="月々の電気代を大幅に削減したい方"
+        class="w-[85%] mx-auto"
+      />
+      <img
+        src="images/fv-text1.svg"
+        alt="ちょっと待って！"
+        class="w-[50%] mt-6 mx-auto"
+      />
+      <h2 class="text-center py-6 px-4 font-mincho text-basecolor">
+        <span class="block text-3xl mb-2 tracking-wider"
+          >太陽光発電・蓄電池</span
+        >
+        <span class="flex items-center justify-center gap-2">
+          <span class="text-6xl font-bold">安さ</span>
+          <span class="text-xl leading-relaxed pt-2 text-left"
+            >だけで選ぼうと<br />していませんか？</span
+          >
+        </span>
+      </h2>
+      <img src="images/fv-2.webp" alt="太陽光パネル・蓄電池のイメージ写真" />
+
       <div class="w-[90%] text-center mx-auto">
         <p class="py-5">
           <span class="text-[#d7444a] font-bold">豊富な施工実績</span>と<span
@@ -67,18 +92,18 @@
         /></a>
         <div class="flex gap-5 justify-center pt-6 pb-9">
           <img
-            src="images/fv-2.webp"
-            alt="太陽光発電施工イメージ写真1"
-            class="w-1/4 h-auto object-cover"
-          />
-          <img
             src="images/fv-3.webp"
-            alt="太陽光発電施工イメージ写真2"
+            alt="施工の様子"
             class="w-1/4 h-auto object-cover"
           />
           <img
             src="images/fv-4.webp"
-            alt="太陽光発電施工イメージ写真3"
+            alt="施工の様子"
+            class="w-1/4 h-auto object-cover"
+          />
+          <img
+            src="images/fv-5.webp"
+            alt="施工の様子"
             class="w-1/4 h-auto object-cover"
           />
         </div>
@@ -104,7 +129,7 @@
           <img src="images/tri.svg" alt="" class="w-[80%] h-auto mx-auto" />
         </div>
       </div>
-      <p class="w-[80%] mx-auto text-center py-6 mt-6">
+      <p class="w-[80%] mx-auto text-center py-9 mt-6">
         太陽光発電や蓄電池を導入する際、<br />「安さ」だけで選んでいませんか？<br />実は、その判断が公開やトラブルの原因になることも・・・
       </p>
       <div class="bg-background w-[90%] mx-auto py-6">
