テーブルのcss調整

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </div>
       </div>
       <p class="w-[80%] mx-auto text-center py-9 mt-6">
-        太陽光発電や蓄電池を導入する際、<br />「安さ」だけで選んでいませんか？<br />実は、その判断が公開やトラブルの原因になることも・・・
+        太陽光発電や蓄電池を導入する際、<br />「安さ」だけで選んでいませんか？<br />実は、その判断が後悔やトラブルの原因になることも・・・
       </p>
       <div class="bg-background w-[90%] mx-auto py-6">
         <div class="max-w-md mx-auto px-3 font-mincho">
@@ -166,7 +166,7 @@
           </h2>
 
           <!-- チェックリスト -->
-          <ul class="space-y-3 font-semibold list-none">
+          <ul class="space-y-3 font-semibold list-none tracking-[0.03rem]">
             <!-- チェック項目1 -->
             <li class="bg-white shadow-sm p-4 flex items-center gap-6">
               <div
@@ -411,7 +411,7 @@
       <div class="py-6 green-gradient">
         <div class="max-w-md mx-auto px-3">
           <h2
-            class="text-center text-[1.3rem] mb-8 text-white font-mincho font-semibold"
+            class="text-center text-[1.2rem] mb-8 text-white font-mincho font-semibold"
           >
             施工評者選びで損しないために<br />押さえておきたい<br />
             <span
@@ -449,7 +449,9 @@
           </h2>
 
           <!-- チェックリスト -->
-          <ul class="space-y-3 font-mincho font-semibold list-none">
+          <ul
+            class="space-y-3 font-mincho font-semibold list-none tracking-[0.03rem]"
+          >
             <!-- チェック項目1 -->
             <li class="bg-white shadow-sm p-4 flex items-center gap-6">
               <div
@@ -809,7 +811,7 @@
           <table class="w-full mt-4 border-collapse text-sm">
             <tr>
               <td
-                class="border border-gray-400 bg-gray-200 px-4 py-3 text-center"
+                class="border border-gray-400 bg-gray-200 px-1 py-3 text-center w-[30%]"
               >
                 メーカー
               </td>
@@ -819,9 +821,9 @@
             </tr>
             <tr>
               <td
-                class="border border-gray-400 bg-gray-200 px-4 py-3 text-center"
+                class="border border-gray-400 bg-gray-200 px-1 py-3 text-center"
               >
-                太陽光パネル
+                太陽光<br />パネル
               </td>
               <td class="text-left border border-gray-400 px-4 py-3">
                 防眩タイプ&nbsp;4.9kW
@@ -829,7 +831,7 @@
             </tr>
             <tr>
               <td
-                class="border border-gray-400 bg-gray-200 px-4 py-3 text-center"
+                class="border border-gray-400 bg-gray-200 px-1 py-3 text-center"
               >
                 蓄電池
               </td>
@@ -839,7 +841,7 @@
             </tr>
             <tr>
               <td
-                class="border border-gray-400 bg-gray-200 px-4 py-3 text-center"
+                class="border border-gray-400 bg-gray-200 px-1 py-3 text-center"
               >
                 設置地域
               </td>
@@ -849,7 +851,7 @@
             </tr>
             <tr>
               <td
-                class="border border-gray-400 bg-gray-200 px-4 py-3 text-center"
+                class="border border-gray-400 bg-gray-200 px-1 py-3 text-center"
               >
                 補助金利用
               </td>
@@ -875,7 +877,7 @@
           >
             導入のきっかけ
           </h4>
-          <p class="leading-loose pb-3">
+          <p class="leading-loose pb-3 text-[0.9rem]">
             東京都の補助金を利用できると聞き、電気代の高騰もあって太陽光と蓄電池の導入を検討しました。屋根の形状や景観にも合うパネルを希望していたところ、防眩タイプのXSOLパネルを提案いただきました。屋根の配置図とお見積もりの作成には他社さんに比べるとお時間はかかりましたがその分丁寧な対応と正確なレイアウトの作成をして頂き、その中でも配置図のデザイン性と営業様の丁寧さと信頼性でここの会社での導入を決めました。
           </p>
           <h4
@@ -883,15 +885,15 @@
           >
             導入後の感想
           </h4>
-          <p class="leading-loose pb-3">
+          <p class="leading-loose pb-3 text-[0.9rem]">
             日中は太陽光でまかなえて、夜は蓄電池の電気で生活できるようになりました。停電時にも安心ですし、アプリで発電や蓄電の状況を確認できるのも便利です。防眩パネルのおかげで反射が少なく、近隣からも“見た目がきれい”と評判です。
           </p>
           <h4
-            class="font-mincho tracking-[0.25rem] bg-basecolor text-white rounded-tr-lg rounded-bl-lg inline-block py-2 px-6 my-3"
+            class="font-mincho tracking-[0.25rem] text-xl bg-basecolor text-white rounded-tr-lg rounded-bl-lg inline-block py-2 px-6 my-3"
           >
             担当者コメント
           </h4>
-          <p class="leading-loose">
+          <p class="leading-loose text-[0.9rem]">
             今回のA様邸では、東京都補助金を最大限活用し、自己負担を大幅に抑えて導入いただきました。XSOLの防眩パネルは景観に配慮した設計で、都市部の住宅街でも選ばれやすいモデルです。15kWhの大容量蓄電池により、災害時にも安心の電力自立型住宅が実現しました。大変ご好評につき設計にもお時間をいただきましたが、正確な設計且つお客様ファーストの提案や見積もりをさせて頂くという会社の理念が伝わりお客様との契約になり大変嬉しく思います。
           </p>
         </div>
@@ -909,7 +911,7 @@
           <table class="w-full mt-4 border-collapse text-sm">
             <tr>
               <td
-                class="border border-gray-400 bg-gray-200 px-4 py-3 text-center"
+                class="border border-gray-400 bg-gray-200 px-1 py-3 text-center w-[30%]"
               >
                 メーカー
               </td>
@@ -919,9 +921,9 @@
             </tr>
             <tr>
               <td
-                class="border border-gray-400 bg-gray-200 px-4 py-3 text-center"
+                class="border border-gray-400 bg-gray-200 px-1 py-3 text-center"
               >
-                太陽光パネル
+                太陽光<br />パネル
               </td>
               <td class="text-left border border-gray-400 px-4 py-3">
                 京セラ製&nbsp;&nbsp;高効率パネル&nbsp;5.7kW
@@ -929,7 +931,7 @@
             </tr>
             <tr>
               <td
-                class="border border-gray-400 bg-gray-200 px-4 py-3 text-center"
+                class="border border-gray-400 bg-gray-200 px-1 py-3 text-center"
               >
                 蓄電池
               </td>
@@ -939,7 +941,7 @@
             </tr>
             <tr>
               <td
-                class="border border-gray-400 bg-gray-200 px-4 py-3 text-center"
+                class="border border-gray-400 bg-gray-200 px-1 py-3 text-center"
               >
                 設置地域
               </td>
@@ -949,7 +951,7 @@
             </tr>
             <tr>
               <td
-                class="border border-gray-400 bg-gray-200 px-2 py-3 text-center"
+                class="border border-gray-400 bg-gray-200 px-1 py-3 text-center"
               >
                 補助金利用
               </td>
@@ -975,7 +977,7 @@
           >
             導入のきっかけ
           </h4>
-          <p class="leading-loose pb-3">
+          <p class="leading-loose pb-3 text-[0.9rem]">
             もともと太陽光には興味がありましたが、補助金のサポート内容を知って「今がベストタイミング」と思い導入を決意しました。信頼性の高い国内メーカーである京セラ製という点も安心でした。家族の安心と、将来の電気代上昇への備えとして決めました。
           </p>
           <h4
@@ -983,7 +985,7 @@
           >
             導入後の感想
           </h4>
-          <p class="leading-loose pb-3">
+          <p class="leading-loose pb-3 text-[0.9rem]">
             日中の発電で家の電気をまかない、夜は蓄電池の電気で生活できるので、月々の電気代が約半分になりました。さらに、停電時でもリビング・冷蔵庫・Wi-Fiなどがそのまま使えるので安心です。京セラの蓄電池は見た目もスリムで、外観を損なわないのも嬉しいポイントです。
           </p>
           <h4
@@ -991,7 +993,7 @@
           >
             担当者コメント
           </h4>
-          <p class="leading-loose">
+          <p class="leading-loose text-[0.9rem]">
             S様邸では、京セラ製の太陽光と蓄電池の信頼性・長寿命性を重視して導入いただきました。16.5kWhという大容量で、1日以上の停電にも対応可能です。また、京セラの蓄電池は国産メーカーならではの高耐久仕様で、長期的に安定した電力供給を実現できます。東京都の補助金を活用することで、初期費用を大幅に抑えて導入いただきました。
           </p>
         </div>
@@ -1009,7 +1011,7 @@
           <table class="w-full mt-4 border-collapse text-sm">
             <tr>
               <td
-                class="border border-gray-400 bg-gray-200 px-4 py-3 text-center"
+                class="border border-gray-400 bg-gray-200 px-1 py-3 text-center w-[30%]"
               >
                 メーカー
               </td>
@@ -1019,9 +1021,9 @@
             </tr>
             <tr>
               <td
-                class="border border-gray-400 bg-gray-200 px-4 py-3 text-center"
+                class="border border-gray-400 bg-gray-200 px-1 py-3 text-center"
               >
-                太陽光パネル
+                太陽光<br />パネル
               </td>
               <td class="text-left border border-gray-400 px-4 py-3">
                 Canadian Solar製 5.4kW
@@ -1029,7 +1031,7 @@
             </tr>
             <tr>
               <td
-                class="border border-gray-400 bg-gray-200 px-4 py-3 text-center"
+                class="border border-gray-400 bg-gray-200 px-1 py-3 text-center"
               >
                 蓄電池
               </td>
@@ -1039,7 +1041,7 @@
             </tr>
             <tr>
               <td
-                class="border border-gray-400 bg-gray-200 px-4 py-3 text-center"
+                class="border border-gray-400 bg-gray-200 px-1 py-3 text-center"
               >
                 設置地域
               </td>
@@ -1049,7 +1051,7 @@
             </tr>
             <tr>
               <td
-                class="border border-gray-400 bg-gray-200 px-2 py-3 text-center"
+                class="border border-gray-400 bg-gray-200 px-1 py-3 text-center"
               >
                 補助金利用
               </td>
@@ -1075,7 +1077,7 @@
           >
             導入のきっかけ
           </h4>
-          <p class="leading-loose pb-3">
+          <p class="leading-loose pb-3 text-[0.9rem]">
             電気代の高騰と停電対策のために、太陽光と蓄電池の導入を検討していました。担当の方から東京都の補助金制度を活用すれば、自己負担を大幅に抑えられると聞き、導入を決めました。見た目もスタイリッシュなカナディアンソーラーのEP-CUBEが気に入りました。
           </p>
           <h4
@@ -1083,7 +1085,7 @@
           >
             導入後の感想
           </h4>
-          <p class="leading-loose pb-3">
+          <p class="leading-loose pb-3 text-[0.9rem]">
             日中の発電を夜間にしっかり使えるので、電気代の削減効果を実感しています。停電が起きても家じゅうの電気がそのまま使えるのは本当に安心です。デザインもスマートで、家の外観にも自然に馴染んでいます。アプリで発電・蓄電の状況を見られるのも便利です。
           </p>
           <h4
@@ -1091,7 +1093,7 @@
           >
             担当者コメント
           </h4>
-          <p class="leading-loose">
+          <p class="leading-loose text-[0.9rem]">
             K様邸では、東京都補助金を最大限に活用し、実質的な自己負担を抑えて導入していただきました。EP-CUBEはPCS一体型のコンパクト設計で、外壁スペースを取らず美観性にも優れています。13.8kWhの容量があれば、家族4人の1日分の電力をまかなうことが可能です。太陽光との相性も非常に良く、環境にも家計にもやさしい住宅となりました。
           </p>
         </div>
