--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
           alt="POINT 安心サポート POINT 工事保証"
           class="-mt-4 pb-9"
         />
-        <h3 class="font-mincho font-semibold text-[1rem]">
+        <h3 class="font-mincho font-semibold text-[1.1rem]">
           お見積もりから設置まで<br />全て自社施工だから<br /><span
             class="text-gradient text-[2rem] font-bold"
             >高品質</span
@@ -731,7 +731,7 @@
           <div class="my-6 bg-white pt-8 rounded-xl">
             <p>
               <span
-                class="bg-basecolor text-white text-[0.9rem] inline-block py-1 px-2 mb-2"
+                class="bg-basecolor text-white text-[0.8rem] inline-block py-1 px-2 mb-2"
               >
                 お客様に誠実・真面目なY2エナジーグループ
               </span>
@@ -751,13 +751,13 @@
                   >薦</span
                 ><span class="self-end text-[2rem]">の</span> </span
               ><br /><span
-                class="font-mincho font-semibold text-[1.8rem] tracking-[0.3rem]"
+                class="font-mincho font-semibold text-[1.8rem] tracking-[0.3rem] pt-2 inline-block"
                 ><span class="text-gradient-blue">補助金活用</span
                 >プラン！</span
               >
             </p>
             <div
-              class="relative bg-basecolor text-white rounded-lg px-6 py-4 mx-4 mt-6"
+              class="relative bg-basecolor text-white rounded-lg px-6 py-8 mx-4 mt-6"
             >
               <p class="text-sm leading-relaxed">
                 補助金を活用することで<br />導入費用を大きく削減できます！
@@ -1006,7 +1006,7 @@
           <p
             class="text-center my-6 text-xl font-mincho tracking-[0.25rem] font-semibold"
           >
-            カナディアンソーラーEP-CUBE<br />13.8kWh
+            カナディアンソーラー<br />EP-CUBE<br />13.8kWh
           </p>
           <table class="w-full mt-4 border-collapse text-sm">
             <tr>
@@ -1634,7 +1634,7 @@
                 ※担当者からご状況をお伺いさせていただきますので<br />&emsp;ご連絡をお取りできる番号をご入力ください
               </p>
               <input
-                type="text"
+                type="tel"
                 class="w-full border py-1 pl-2 placeholder:font-sans placeholder:text-[0.8rem] placeholder:leading-normal placeholder:text-gray-300"
                 placeholder="例）09012345678"
                 name="entry.1391697315"
@@ -1650,7 +1650,7 @@
                 >
               </p>
               <input
-                type="text"
+                type="email"
                 class="w-full border py-1 pl-2 placeholder:font-sans placeholder:text-[0.8rem] placeholder:leading-normal placeholder:text-gray-300"
                 placeholder="例）example@y2energygroup.jp"
                 name="entry.189612708"
