スマホ完成

--- a/index.html
+++ b/index.html
@@ -1194,7 +1194,7 @@
         <h2 class="text-xl font-mincho tracking-[0.25rem]">
           最新の超薄型太陽光パネル<br /><span
             class="text-5xl font-semibold tracking-[0.7rem] inline-block pt-3"
-            ><span class="font-cinzel">9</span>つの特徴</span
+            ><span class="font-cinzel pr-2">9</span>つの特徴</span
           >
         </h2>
         <ul class="list-none text-[0.85rem]">
@@ -1552,7 +1552,7 @@
                 ※関東地方の1都6県以外はサービス対象外です。
               </p>
               <input
-                type="text"
+                type="number"
                 class="w-full border py-1 pl-2"
                 placeholder=""
                 name="entry.859663624"
